# pgeon

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
example/cartpole/: README.md  demo.ipynb  demo.py  discretizer.py  simple_agent.py  test_intentions.py
example/cartpole/checkpoints/PPO_CartPole-v1_1acbb_00000_0_2023-12-05_19-28-36/: events.out.tfevents.1701800928.adri  params.json  params.pkl  progress.csv  result.json
pgeon/: __init__.py  agent.py  desire.py  discretizer.py  intention_introspector.py  policy_graph.py
pgeon_xai/: environment.py  policy_graph.py
src/pgeon/: __init__.py  agent.py  desire.py  discretizer.py  environment.py  intention_aware_policy_approximator.py  intention_aware_policy_graph.py  intention_introspector.py  ipg_xai.py  node.py  policy_approximator.py  policy_graph.py  policy_representation.py  transition.py
test/data/: cartpole_edges_small.csv  cartpole_nodes_small.csv  cartpole_small.pickle  cartpole_trajectories_small.csv  pg_random0_24_edges.csv  pg_random0_24_nodes.csv
test/domain/: cartpole.py  test_env.py
test/pgeon/: test_ask_questions_to_graph.py  test_create_graph_from_environment.py  test_create_graph_from_traces.py  test_create_pg_based_agent_from_graph.py  test_desire.py  test_discretizer.py  test_end_to_end.py  test_intention_aware_policy_approximator.py  test_intention_aware_policy_graph.py  test_ipg_xai.py  test_load_graph_from_file.py  test_policy_approximator.py  test_policy_representation.py  test_save_graph_to_file.py
(+9 files in other folders)
